fix: viewport resizing bug on mobile

--- a/front-end/src/assets/style.css
+++ b/front-end/src/assets/style.css
@@ -15,6 +15,7 @@
 }
 
 html, body, .root{
+  min-height: 100vh;
   font-family: var(--main-font);
   font-size: 14px;
   color: var(--font-color);
